--- a/CeylanMotors/GaleriAdmin/Views/_ViewImports.cshtml
+++ b/CeylanMotors/GaleriAdmin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using GaleriAdmin
 @using GaleriAdmin.Models
+@using Galeri.ViewModel.Category
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
