--- a/CeylanMotors/GaleriAdmin/Views/Slider/Edit.cshtml
+++ b/CeylanMotors/GaleriAdmin/Views/Slider/Edit.cshtml
@@ -39,6 +39,14 @@
                             <span asp-validation-for="SliderFileName" class="form-text text-danger"></span>
                         </div>
                     </div>
+
+                        <div class="row mb-3">
+                            <div class="col-sm-2"></div>
+                            <div class="col-sm-10">
+                                <input type="submit" class="btn btn-success" value="Kaydet" />
+                                <a class="btn btn-danger" asp-controller="Account" asp-action="Index">Geri</a>
+                            </div>
+                        </div>
                 </form>
             </div>
         </div>
