--- a/CeylanMotors/GaleriClient/Views/Ilanlar/Index.cshtml
+++ b/CeylanMotors/GaleriClient/Views/Ilanlar/Index.cshtml
@@ -5,42 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Araç Detayları</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .modal-content {
-            background-color: #2c2c2c;
-            color: white;
-        }
-
-        .modal-header {
-            border-bottom: 1px solid #444;
-        }
-
-        .modal-footer {
-            border-top: 1px solid #444;
-        }       
-        .modal-body p {
-            margin: 0;
-            padding: 5px 0;
-           
-        }
-
-        .modal-body h3 {
-            margin-bottom: 15px;
-        }
-
-        .modal-body img {
-            border: 2px solid #555;
-            border-radius: 15px;
-            margin-top: 15px;
-        }
-
-        .modal-body .details {
-            padding-left: 15px;
-        }
-
-       
-        
-    </style>
+    <link href="~/ilanlarcss/ilanlarcss.css" rel="stylesheet" />
 </head>
 <body class="body" style="background-color:#191919;">
     <h1 style="text-align:center;color:white">Güncel İlanlarımız</h1>
@@ -86,7 +51,27 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-md-4">
-                            <img src="~/images/bmw.jpg" id="modalImage" class="img-fluid" style="object-fit:cover" />
+                            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="~/Images/2008.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="~/Images/car-3.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="~/Images/car-1.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
                         </div>
                         <div class="col-md-8 details">
                             <!-- araba detay bura -->
