--- a/CeylanMotors/GaleriClient/Views/Ilanlar/Index.cshtml
+++ b/CeylanMotors/GaleriClient/Views/Ilanlar/Index.cshtml
@@ -104,7 +104,7 @@
                  data-yil="@item.Yil"
                  data-fiyat="@item.Fiyat"
                  data-image="/images/bmw.jpg">
-                <img src="/images/bmw.jpg" class="card-img-top" alt="Araç Resmi">
+                <img src="https://localhost:7280/uploads/2008_50830628-f5e9-45ac-b1ad-d4b971be9359.jpg)" class="card-img-top" alt="Araç Resmi">
                 <div class="card-body">
                     <h5 class="card-title" style="text-align:center; color:white;">@item.Marka</h5>
                     <p class="card-text" style="color:white;">Modeli: @item.Modeli</p>
@@ -112,7 +112,7 @@
                     <p class="card-text" style="color:white;">Fiyatı: @item.Fiyat ₺</p>
                     <a href="#" class="btn btn-danger detail-btn" style="align-items:end">İlan Detayı</a>
                 </div>
-            </div>
+            </div> 
         }
     </div>
 
